--- a/export_presets.cfg
+++ b/export_presets.cfg
@@ -9,7 +9,7 @@ custom_features=""
 export_filter="all_resources"
 include_filter=""
 exclude_filter=""
-export_path="../exports/index.html"
+export_path="../export/index.html"
 encryption_include_filters=""
 encryption_exclude_filters=""
 encrypt_pck=false
@@ -22,7 +22,7 @@ custom_template/debug=""
 custom_template/release=""
 variant/extensions_support=false
 variant/thread_support=false
-vram_texture_compression/for_desktop=true
+vram_texture_compression/for_desktop=false
 vram_texture_compression/for_mobile=false
 html/export_icon=true
 html/custom_html_shell=""
